force-app/main/default/objects/Customer_Target__c/Customer_Target__c.object-meta.xml
<CustomObject>
    <label>Customer Target</label>
    <nameField>
        <displayFormat>CTAR-{0000}</displayFormat>
        <label>Customer Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>