force-app/main/default/objects/Customer_Target__c/fields/Target_Actual__c.field-meta.xml
<CustomField>
    <fullName>Target_Actual__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Target Actual</label>
    <referenceTo>Target_Actual__c</referenceTo>
    <relationshipLabel>Customer Targets</relationshipLabel>
    <relationshipName>Customer_Targets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>